# ellipsinator

./: README.rst  make_release.sh  pyproject.toml  setup.py
ellipsinator/: __init__.py  _fit_ellipse_process_params.py  basic.py  direct_ellipse_fit.py  fast_guaranteed_ellipse_estimate.py  fit_ellipse_fitzgibon.py  fit_ellipse_halir.py
ellipsinator/_fast_guaranteed_ellipse_funcs/: compute_directellipse_estimate.py  fastGuaranteedEllipseFit.py  fastLevenbergMarquardtStep.py  normalize_data_isotropically.py  struct_t.py
ellipsinator/tests/: fgee_test_data.py  test_fast_guaranteed_ellipse_estimate.py  test_fit_ellipse_halir.py
